RESOLVED FIXED 153403
[Font Loading] General cleanup
https://bugs.webkit.org/show_bug.cgi?id=153403
Summary [Font Loading] General cleanup
Myles C. Maxfield
Reported 2016-01-23 23:30:57 PST
[Font Loading] General cleanup
Attachments
Patch (13.57 KB, patch)
2016-01-23 23:35 PST, Myles C. Maxfield
no flags
Patch (14.48 KB, patch)
2016-01-23 23:54 PST, Myles C. Maxfield
no flags
Patch (14.56 KB, patch)
2016-01-24 00:04 PST, Myles C. Maxfield
no flags
Patch (13.81 KB, patch)
2016-01-24 00:33 PST, Myles C. Maxfield
no flags
Archive of layout-test-results from ews100 for mac-yosemite (796.89 KB, application/zip)
2016-01-24 01:22 PST, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-yosemite (852.81 KB, application/zip)
2016-01-24 01:28 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (994.55 KB, application/zip)
2016-01-24 01:52 PST, Build Bot
no flags
Patch (13.64 KB, patch)
2016-01-24 12:08 PST, Myles C. Maxfield
darin: review+
Myles C. Maxfield
Comment 1 2016-01-23 23:35:25 PST
Myles C. Maxfield
Comment 2 2016-01-23 23:54:58 PST
Myles C. Maxfield
Comment 3 2016-01-24 00:04:01 PST
Myles C. Maxfield
Comment 4 2016-01-24 00:33:12 PST
Build Bot
Comment 5 2016-01-24 01:22:55 PST
Comment on attachment 269688 [details] Patch Attachment 269688 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/732296 New failing tests: fast/invalid/invalidSVGFont.html
Build Bot
Comment 6 2016-01-24 01:22:57 PST
Created attachment 269689 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-01-24 01:28:09 PST
Comment on attachment 269688 [details] Patch Attachment 269688 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/732288 New failing tests: fast/invalid/invalidSVGFont.html
Build Bot
Comment 8 2016-01-24 01:28:11 PST
Created attachment 269690 [details] Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2016-01-24 01:52:42 PST
Comment on attachment 269688 [details] Patch Attachment 269688 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/732363 New failing tests: fast/invalid/invalidSVGFont.html
Build Bot
Comment 10 2016-01-24 01:52:45 PST
Created attachment 269691 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 11 2016-01-24 12:08:24 PST
Darin Adler
Comment 12 2016-01-24 12:10:44 PST
Comment on attachment 269688 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=269688&action=review > Source/WebCore/ChangeLog:18 > + No new tests because there is no behavior change. Looks like the invalidSVGFont.html test is crashing with this change. > Source/WebCore/css/CSSFontFaceSource.h:71 > + bool isSVGFontFaceSource() const { return m_svgFontFaceElement || is<CachedSVGFont>(m_font.get()); } Does this have to be inline? Too bad that we have to include CachedSVGFont.h in this header just so we can compile this inline function. > Source/WebCore/platform/network/HTTPParsers.cpp:129 > + auto valueStringView = StringView(value); > + for (UChar c : valueStringView.codeUnits()) { Really irritating that you need the local variable here. C++ for loop lifetime rules are failing us!
Darin Adler
Comment 13 2016-01-24 12:11:13 PST
Comment on attachment 269699 [details] Patch r=me assuming this version fixes the crash
Myles C. Maxfield
Comment 14 2016-01-24 21:23:59 PST
Note You need to log in before you can comment on or make changes to this bug.